syntax = "proto3";

option go_package = "github.com/BerryTracer/auth-service";

// Token structure that holds both access and refresh tokens.
message Token {
    string access_token = 1;
    string refresh_token = 2;
  }
  
  // The AuthService provides methods for user authentication and token management.
  service AuthService {
    rpc SignUp(SignUpRequest) returns (Token);
    rpc SignIn(SignInRequest) returns (Token);
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (Token);
  }
  
  // Request for SignUp method.
  message SignUpRequest {
    string email = 1;
    string username = 2;
    string password = 3;
  }
  
  // Request for SignIn method.
  message SignInRequest {
    string email = 1;
    string password = 2;
  }
  
  // Request for VerifyToken method.
  message VerifyTokenRequest {
    string token = 1;
  }
  
  // Response for VerifyToken method.
  message VerifyTokenResponse {
    bool valid = 1;
    // Map in protobuf can only have string as key and value.
    // You will need to serialize and deserialize complex types manually.
    map<string, string> claims = 2;
  }
  
  message RefreshTokenRequest {
    string token = 1;
  }